# Q2_2026_Accel_Lalit

accel_anchor-esrow/: Anchor.toml
accel_anchor-esrow/programs/anchor-escrow-q2-2026/src/: lib.rs
accel_anchor-esrow/programs/anchor-escrow-q2-2026/tests/: mod.rs
escrow/: Anchor.toml
escrow/programs/escrow/: Cargo.toml
escrow/programs/escrow/src/: lib.rs
generic-storage/: .gitignore  README.md
generic-storage/tests/: integration.rs
gpt-oracle/: .gitignore  Anchor.toml
gpt-oracle/programs/gpt-oracle/src/: lib.rs
magicblock-er-example/: .gitignore
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: call_back.rs  delegate.rs  init_user.rs  mod.rs  request_vrf.rs  undelegate.rs  update_commit.rs  update_user.rs
transfer_vault_hook/: Anchor.toml
transfer_vault_hook/programs/transfer_vault_hook/: Cargo.toml
transfer_vault_hook/programs/transfer_vault_hook/src/: constants.rs  error.rs  lib.rs
transfer_vault_hook/programs/transfer_vault_hook/src/instructions/: deposit.rs  initialize_vault.rs  mint_to_user.rs  mod.rs  whitelist_ops.rs  withdraw.rs
transfer_vault_hook/programs/transfer_vault_hook/src/state/: vault.rs  (+1 more)
transfer_vault_hook/programs/transfer_vault_hook/tests/: test_vault_flow.rs
transfer_vault_hook/programs/whitelist_hook/: Cargo.toml
transfer_vault_hook/programs/whitelist_hook/src/: lib.rs
transfer_vault_hook/tests/: transfer_vault_hook.ts
tuktuk-escrow/: Anchor.toml  package.json
tuktuk-escrow/cron/: cron.ts
tuktuk-escrow/programs/tuktuk-escrow/: Cargo.toml
tuktuk-escrow/programs/tuktuk-escrow/src/: error.rs  lib.rs  state.rs
tuktuk-escrow/programs/tuktuk-escrow/src/instructions/: auto_refund.rs  make.rs  refund.rs  schedule.rs  take.rs
tuktuk-escrow/tests/: tuktuk-escrow.ts
whitelist-transfer-hook-q2/: Anchor.toml
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/src/: instructions.rs  lib.rs  state.rs
whitelist-transfer-hook-q2/programs/whitelist-transfer-hook-q2/tests/: test_initialize.rs
(+3 files in other folders)
